@@ -9,6 +9,9 @@ Changes
 * zloop works with zmq_pollitem_t * instead of void * sockets; allows
   use of native FDs in reactor as well as 0MQ sockets.
 
+* zloop_reader renamed to zloop_poller, and zloop_cancel API also changed
+  to work with zmq_pollitem_t * instead of a single 0MQ socket void *.
+
 * Added zmsg_content_size method to report full content size of message.
 
 * zmsg_save returns 0/-1 depending on success/failure (previously returned
